delayed_echo = executable(
  'delayed_echo',
  'delayed_echo.cpp',
  include_directories: includes,
  link_with: sdeventplus)

follow = executable(
  'follow',
  'follow.cpp',
  include_directories: includes,
  link_with: sdeventplus)

heartbeat = executable(
  'heartbeat',
  'heartbeat.cpp',
  include_directories: includes,
  link_with: sdeventplus)

hearbeat_timer = executable(
  'heartbeat_timer',
  'heartbeat_timer.cpp',
  include_directories: includes,
  link_with: sdeventplus)
