nobase_include_HEADERS =
pkgconfig_DATA = sdeventplus.pc
lib_LTLIBRARIES = libsdeventplus.la
libsdeventplus_la_SOURCES =
libsdeventplus_la_LIBADD = $(COMMON_LIBS)

nobase_include_HEADERS += sdeventplus/event.hpp
libsdeventplus_la_SOURCES += sdeventplus/event.cpp

nobase_include_HEADERS += sdeventplus/exception.hpp
libsdeventplus_la_SOURCES += sdeventplus/exception.cpp

nobase_include_HEADERS += sdeventplus/source.hpp
libsdeventplus_la_SOURCES += sdeventplus/source.cpp

nobase_include_HEADERS += sdeventplus/internal/sdevent.hpp
libsdeventplus_la_SOURCES += sdeventplus/internal/sdevent.cpp

nobase_include_HEADERS += sdeventplus/internal/sdref.hpp

nobase_include_HEADERS += sdeventplus/test/sdevent.hpp
