nobase_include_HEADERS =
pkgconfig_DATA = sdeventplus.pc
lib_LTLIBRARIES = libsdeventplus.la
libsdeventplus_la_SOURCES =
libsdeventplus_la_LIBADD = $(COMMON_LIBS)

nobase_include_HEADERS += sdeventplus/clock.hpp
libsdeventplus_la_SOURCES += sdeventplus/clock.cpp

nobase_include_HEADERS += sdeventplus/event.hpp
libsdeventplus_la_SOURCES += sdeventplus/event.cpp

nobase_include_HEADERS += sdeventplus/exception.hpp
libsdeventplus_la_SOURCES += sdeventplus/exception.cpp

nobase_include_HEADERS += sdeventplus/internal/sdevent.hpp
libsdeventplus_la_SOURCES += sdeventplus/internal/sdevent.cpp

nobase_include_HEADERS += sdeventplus/internal/sdref.hpp
libsdeventplus_la_SOURCES += sdeventplus/internal/sdref.cpp

nobase_include_HEADERS += sdeventplus/internal/utils.hpp

nobase_include_HEADERS += sdeventplus/source/base.hpp
libsdeventplus_la_SOURCES += sdeventplus/source/base.cpp

nobase_include_HEADERS += sdeventplus/source/event.hpp
libsdeventplus_la_SOURCES += sdeventplus/source/event.cpp

nobase_include_HEADERS += sdeventplus/source/io.hpp
libsdeventplus_la_SOURCES += sdeventplus/source/io.cpp

nobase_include_HEADERS += sdeventplus/source/signal.hpp
libsdeventplus_la_SOURCES += sdeventplus/source/signal.cpp

nobase_include_HEADERS += sdeventplus/source/time.hpp
libsdeventplus_la_SOURCES += sdeventplus/source/time.cpp

nobase_include_HEADERS += sdeventplus/test/sdevent.hpp
